tests/baselines/reference/parserEnumDeclaration3.d.errors.txt
==== tests/cases/compiler/parserEnumDeclaration3.d.ts (1 errors) ====
    enum E {
         ~
!!! parserEnumDeclaration3.d.ts(1,6): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
       A = 1
    }